--- a/roles/gangtise/defaults/main.yml
+++ b/roles/gangtise/defaults/main.yml
@@ -29,7 +29,7 @@ ES_NODES: '10.0.2.10:9300,10.0.2.11:9300,10.0.2.12:9300'
 KAFKA_SERVERS: '10.0.3.20:9092,10.0.3.24:9092,10.0.3.26:9092'
 READ_TIMEOUT: '20000'
 REDIS_NODES: 'redis.default:6379'
-REDIS_PASSWORD: "''"
+REDIS_PASSWORD: ''
 SPRING_ACTIVE: sit
 
 MYSQL_HOST: gangtisedb.mysql.database.chinacloudapi.cn
