--- a/roles/gangtise/defaults/main.yml
+++ b/roles/gangtise/defaults/main.yml
@@ -6,33 +6,33 @@ ignite_namespace: ignite
 ignite_storageclass: default
 
 #images
-eureka_image: 'gangtiseacr.azurecr.cn/gangtise-eureka-service:1.0.0'
-auth_service_image: 'gangtiseacr.azurecr.cn/gangtise-auth-service:1.0.3.1'
-gateway_service_image: 'gangtiseacr.azurecr.cn/gangtise-gateway-service:1.0.3.4'
-userinfo_service_image: 'gangtiseacr.azurecr.cn/gangtise-userinfo-service:1.0.3.3-batch'
-keyboard_yhty_image: 'gangtiseacr.azurecr.cn/gts-yhty-search:1.0.0-batch'
-ignite_image: 'gangtiseacr.azurecr.cn/quark-ignite:2.1'
-control_image: 'gangtiseacr.azurecr.cn/quark-control-server:1.4'
-maxwell_image: 'gangtiseacr.azurecr.cn/quark-maxwell:1.0.7.4'
-response_client_image: 'gangtiseacr.azurecr.cn/quark-response-client:1.1.24.202'
+eureka_image: "'gangtiseacr.azurecr.cn/gangtise-eureka-service:1.0.0'"
+auth_service_image: "'gangtiseacr.azurecr.cn/gangtise-auth-service:1.0.3.1'"
+gateway_service_image: "'gangtiseacr.azurecr.cn/gangtise-gateway-service:1.0.3.4'"
+userinfo_service_image: "'gangtiseacr.azurecr.cn/gangtise-userinfo-service:1.0.3.3-batch'"
+keyboard_yhty_image: "'gangtiseacr.azurecr.cn/gts-yhty-search:1.0.0-batch'"
+ignite_image: "'gangtiseacr.azurecr.cn/quark-ignite:2.1'"
+control_image: "'gangtiseacr.azurecr.cn/quark-control-server:1.4'"
+maxwell_image: "'gangtiseacr.azurecr.cn/quark-maxwell:1.0.7.4'"
+response_client_image: "'gangtiseacr.azurecr.cn/quark-response-client:1.1.24.202'"
 
 eureka_name: eureka
-EUREKA_SERVER: "'http://{{ eureka_name }}-0.{{ eureka_name }}.{{ spring_app_namespace }}.svc.cluster.local:1025/eureka/,http://{{ eureka_name }}-1.{{ eureka_name }}.{{ spring_app_namespace }}.svc.cluster.local:1025/eureka/''"
+EUREKA_SERVER: "'http://{{ eureka_name }}-0.{{ eureka_name }}.{{ spring_app_namespace }}.svc.cluster.local:1025/eureka/,http://{{ eureka_name }}-1.{{ eurek_name }}.{{ spring_app_namespace }}.svc.cluster.local:1025/eureka/'"
 LOG_FLATFILE_PATH: /export/home/log
 
-COMMAND_TIMEOUT: '80000'
-CONNECT_TIMEOUT: '20000'
+COMMAND_TIMEOUT: "'80000'"
+CONNECT_TIMEOUT: "'20000'"
 
 ES_CLUSTER_NAME: elasticsearch
 ES_NODES: "'10.0.2.10:9300,10.0.2.11:9300,10.0.2.12:9300'"
 
 KAFKA_SERVERS: "'10.0.3.20:9092,10.0.3.24:9092,10.0.3.26:9092'"
-READ_TIMEOUT: '20000'
-REDIS_NODES: 'redis.default:6379'
-REDIS_PASSWORD: ''
+READ_TIMEOUT: "'20000'"
+REDIS_NODES: "'redis.default:6379'"
+REDIS_PASSWORD: "''"
 SPRING_ACTIVE: sit
 
-MYSQL_HOST: "'gangtisedb.mysql.database.chinacloudapi.cn'"
+MYSQL_HOST: "gangtisedb.mysql.database.chinacloudapi.cn"
 MYSQL_PORT: 3306
 MYSQL_USERNAME: ""
 MYSQL_PASSWORD: ""
