--- a/roles/gangtise/defaults/main.yml
+++ b/roles/gangtise/defaults/main.yml
@@ -1,9 +1,9 @@
 ---
 # defaults file for gangtise
-spring_app_namespace: spring-app
+spring_app_namespace: "spring-app"
 
-ignite_namespace: ignite
-ignite_storageclass: default
+ignite_namespace: "ignite"
+ignite_storageclass: "default"
 
 #images
 eureka_image: "'gangtiseacr.azurecr.cn/gangtise-eureka-service:1.0.0'"
@@ -16,7 +16,8 @@ control_image: "'gangtiseacr.azurecr.cn/quark-control-server:1.4'"
 maxwell_image: "'gangtiseacr.azurecr.cn/quark-maxwell:1.0.7.4'"
 response_client_image: "'gangtiseacr.azurecr.cn/quark-response-client:1.1.24.202'"
 
-eureka_name: eureka
+eureka_name: "eureka"
+
 EUREKA_SERVER: "http://{{ eureka_name }}-0.{{ eureka_name }}.{{ spring_app_namespace }}.svc.cluster.local:1025/eureka/,http://{{ eureka_name }}-1.{{ eurek_name }}.{{ spring_app_namespace }}.svc.cluster.local:1025/eureka/"
 LOG_FLATFILE_PATH: /export/home/log
 
@@ -30,10 +31,10 @@ KAFKA_SERVERS: "'10.0.3.20:9092,10.0.3.24:9092,10.0.3.26:9092'"
 READ_TIMEOUT: "'20000'"
 REDIS_NODES: "'redis.default:6379'"
 REDIS_PASSWORD: "''"
-SPRING_ACTIVE: sit
+SPRING_ACTIVE: "sit"
 
 MYSQL_HOST: "gangtisedb.mysql.database.chinacloudapi.cn"
-MYSQL_PORT: 3306
+MYSQL_PORT: "3306"
 MYSQL_USERNAME: ""
 MYSQL_PASSWORD: ""
 MYSQL_URL: "'{{ MYSQL_HOST }}:{{ MYSQL_PORT }}'"
