--- a/roles/gangtise/tasks/main.yml
+++ b/roles/gangtise/tasks/main.yml
@@ -18,7 +18,7 @@
   - quark-control-server
   - quark-maxwell
   - quark-response-client
-  - spring-app-namespace
+  - namespaces
   - spring-config
 
 - name: 获取所有已经创建的POD信息
@@ -31,6 +31,12 @@
   with_items:
   - spring-app-namespace
   - spring-config
+  run_once: true
+
+- name: 创建容器令牌
+  shell: |
+    "{{ bin_dir }}/kubectl create secret docker-registry {{ container_secret }} --namespace={{ spring_app_namespace }} --docker-server={{ container_registry }} --docker-username={{ container_user }}  --docker-password={{ container_password }}"
+    "{{ bin_dir }}/kubectl create secret docker-registry {{ container_secret }}  --namespace={{ ignite_namespace }} --docker-server={{ container_registry }} --docker-username={{ container_user }}  --docker-password={{ container_password }}"
   run_once: true
 
 - name: 创建注册中心部署
@@ -73,8 +79,28 @@
   shell: ""
   run_once: true
 
+- name: 轮询等待ignite达到Running状态
+
+  shell: "{{ bin_dir }}/kubectl get pod -n ignite | grep ignite-0  | awk '{print $3}'"
+  register: ignite_status
+  until: ignite_status.stdout == "Running"
+  retries: 10
+  delay: 30
+  tags: ignite
+
 - name: 配置ignite部署
   shell: |
     echo "hello"
     #"{{ bin_dir }}/kubectl exec -it ignite-0 -n ignite -- ./apache-ignite/bin/control.sh --activate --yes"
   run_once: true
+ tags: ignite
+
+- name: 轮询等待quark-control-server达到Running状态
+
+  shell: "{{ bin_dir }}/kubectl get pod -n ignite | grep quark-control-server | awk '{print $3}'"
+  register: ignite_control_status
+  until: ignite_control_status.stdout == "Running"
+  retries: 10
+  delay: 30
+  tags: ignite_control
+
