--- a/roles/gangtise/tasks/main.yml
+++ b/roles/gangtise/tasks/main.yml
@@ -28,26 +28,26 @@
   - spring-config
   run_once: true
 
-- name: 获取容器令牌
+- name: 获取spring_app容器令牌
   command: "{{ bin_dir }}/kubectl get secret --namespace={{ spring_app_namespace }} "
   register: spring_app_secret_info
   run_once: true
 
 - block:    
-    - name: 删除容器令牌
+    - name: 删除spring_app容器令牌
       shell: "{{ bin_dir }}/kubectl delete secret docker-registry {{ container_secret }} --namespace={{ spring_app_namespace }}"
       run_once: true
   when: 
   - '"kubernetes.io/dockerconfigjson" in spring_app_secret_info.stdout'
   ignore_errors: true
 
-- name: 获取容器令牌
+- name: 获取ignite容器令牌
   command: "{{ bin_dir }}/kubectl get secret --namespace={{ ignite_namespace }} "
   register: ignite_secret_info
   run_once: true
 
 - block:    
-    - name: 删除容器令牌
+    - name: 删除ignite容器令牌
       shell: "{{ bin_dir }}/kubectl delete secret docker-registry {{ container_secret }} --namespace={{ ignite_namespace }}"
       run_once: true
   when: 
