--- a/roles/gangtise/tasks/main.yml
+++ b/roles/gangtise/tasks/main.yml
@@ -38,7 +38,7 @@
       shell: "{{ bin_dir }}/kubectl delete secret docker-registry {{ container_secret }} --namespace={{ spring_app_namespace }}"
       run_once: true
   when: 
-  - '"kubernetes.io/dockerconfigjson" in spring_app_secret_info.stdout'
+  - '"dockerconfigjson" in spring_app_secret_info.stdout'
   ignore_errors: true
 
 - name: 获取ignite容器令牌
@@ -51,7 +51,7 @@
       shell: "{{ bin_dir }}/kubectl delete secret docker-registry {{ container_secret }} --namespace={{ ignite_namespace }}"
       run_once: true
   when: 
-  - '"kubernetes.io/dockerconfigjson" in ignite_secret_info.stdout'
+  - '"dockerconfigjson" in ignite_secret_info.stdout'
   ignore_errors: true
 
 - name: 创建容器令牌
