--- a/roles/gangtise/tasks/main.yml
+++ b/roles/gangtise/tasks/main.yml
@@ -97,7 +97,7 @@
   run_once: true
 
 - name: 创建kafka部署
-  shell: "echeo 'kafka'"
+  shell: "echo 'kafka'"
   run_once: true
 
 - name: 轮询等待ignite达到Running状态
